# sbom-slsa-attestations-example

./: .gitignore  .syft.yml  README.md  main.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: docker.yml  multi-arch-multi-reg-slsa3.yml  release.yml
docker/: Dockerfile
sbom_slsa_attestations_example/: __init__.py  main.py
