[project]
name = "sbom-slsa-attestations-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "requests>=2.34.2",
]

[project.scripts]
sbom-slsa-attestations-example = "sbom_slsa_attestations_example.main:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
